TP-214 refactor(NotaFiscalTipo): melhora a service e os testes da service