@@ -1,9 +1,11 @@
 package com.agrotis.trainees.crud.service;
 
-import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyInt;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
@@ -15,24 +17,21 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
 import com.agrotis.trainees.crud.dto.NotaFiscalTipoDto;
 import com.agrotis.trainees.crud.entity.NotaFiscalTipo;
 import com.agrotis.trainees.crud.exception.CrudException;
+import com.agrotis.trainees.crud.exception.NotaFiscalTipoNaoEncontrada;
 import com.agrotis.trainees.crud.repository.NotaFiscalTipoRepository;
 import com.agrotis.trainees.crud.utils.NotaFiscalTipoDTOMapper;
 
 public class NotaFiscalTipoServiceTest {
 
-    private final Integer ID_ENTRADA = 1;
-    private final Integer ID_SAIDA = 2;
-    private final Integer ID_INEXISTENTE = 9000;
+    private final Integer ID = 1;
     private final String ENTRADA = "Entrada";
     private final String SAIDA = "Saída";
-    private final String INEXISTENTE = "XXXX";
 
     @Mock
     private NotaFiscalTipoRepository repository;
@@ -43,149 +42,179 @@ public class NotaFiscalTipoServiceTest {
     @InjectMocks
     private NotaFiscalTipoService service;
 
+    private NotaFiscalTipo notaFiscalTipo;
+
+    private NotaFiscalTipoDto notaFiscalTipoDto;
+
+    private Optional<NotaFiscalTipo> notaFiscalTipoOpcional;
+
     @Before
     public void setUp() {
         MockitoAnnotations.initMocks(this);
+        inicializarNotaFiscalTipo();
     }
 
     @Test
     public void inserirTipoEntrada() {
-        NotaFiscalTipo notaFiscalTipo = new NotaFiscalTipo();
-        notaFiscalTipo.setNome(ENTRADA);
-        when(repository.save(any(NotaFiscalTipo.class))).thenReturn(notaFiscalTipo);
+        when(repository.save(any())).thenReturn(notaFiscalTipo);        
 
-        NotaFiscalTipoDto dto = new NotaFiscalTipoDto();
-        dto.setNome(notaFiscalTipo.getNome());
-        when(mapper.converterParaEntidade(dto)).thenReturn(notaFiscalTipo);
-        when(repository.save(notaFiscalTipo)).thenReturn(notaFiscalTipo);
-
-        when(service.inserir(dto)).thenReturn(dto);
-        NotaFiscalTipoDto resultado = service.inserir(dto);
-        assertEquals(notaFiscalTipo.getNome(), resultado.getNome());
+        NotaFiscalTipoDto notaFiscalTipoSalva = service.inserir(notaFiscalTipoDto);
+        
+        assertNotNull(notaFiscalTipoSalva);
+        assertEquals(NotaFiscalTipoDto.class, notaFiscalTipoSalva.getClass());
+        assertEquals(ENTRADA, notaFiscalTipoSalva.getNome());
     }
 
     @Test
     public void inserirTipoSaida() {
-        NotaFiscalTipo notaFiscalTipo = new NotaFiscalTipo();
-        notaFiscalTipo.setNome(SAIDA);
-        when(repository.save(any(NotaFiscalTipo.class))).thenReturn(notaFiscalTipo);
+        notaFiscalTipoDto.setNome(SAIDA);
+        when(repository.save(any())).thenReturn(notaFiscalTipo);
 
-        NotaFiscalTipoDto dto = new NotaFiscalTipoDto();
-        dto.setNome(notaFiscalTipo.getNome());
-        when(mapper.converterParaEntidade(dto)).thenReturn(notaFiscalTipo);
-        when(repository.save(notaFiscalTipo)).thenReturn(notaFiscalTipo);
+        NotaFiscalTipoDto notaFiscalTipoSalva = service.inserir(notaFiscalTipoDto);
 
-        when(service.inserir(dto)).thenReturn(dto);
-        NotaFiscalTipoDto resultado = service.inserir(dto);
-        assertEquals(notaFiscalTipo.getNome(), resultado.getNome());
+        assertNotNull(notaFiscalTipoSalva);
+        assertEquals(NotaFiscalTipoDto.class, notaFiscalTipoSalva.getClass());
+        assertEquals(SAIDA, notaFiscalTipoSalva.getNome());
     }
 
     @Test
     public void inserirDeveObrigarNome() {
-        NotaFiscalTipo notaFiscalTipo = new NotaFiscalTipo();
-        when(repository.save(any(NotaFiscalTipo.class))).thenReturn(notaFiscalTipo);
-
-        NotaFiscalTipoDto dto = new NotaFiscalTipoDto();
+        notaFiscalTipoDto.setNome(null);
+        when(repository.save(any())).thenReturn(notaFiscalTipo);
 
         Exception excecao = assertThrows(CrudException.class, () -> {
-            service.inserir(dto);
+            service.inserir(notaFiscalTipoDto);
         });
+
         assertEquals("Obrigatório preencher o nome do tipo de nota fiscal.", excecao.getMessage());
     }
 
     @Test
     public void atualizarTipoEntrada() {
-        NotaFiscalTipo notaFiscalTipo = new NotaFiscalTipo();
-        notaFiscalTipo.setNome(ENTRADA);
-        notaFiscalTipo.setId(ID_ENTRADA);
-        NotaFiscalTipoDto dto = new NotaFiscalTipoDto();
-        dto.setNome(notaFiscalTipo.getNome());
-        dto.setId(notaFiscalTipo.getId());
-        when(mapper.converterParaEntidade(dto)).thenReturn(notaFiscalTipo);
+        when(repository.save(any())).thenReturn(notaFiscalTipo);
+        
+        NotaFiscalTipoDto notaFiscalTipoAtualizada = service.atualizar(notaFiscalTipoDto);
+
         assertNotNull(notaFiscalTipo);
         when(repository.save(notaFiscalTipo)).thenReturn(notaFiscalTipo);
-        when(service.atualizar(dto)).thenReturn(dto);
-        NotaFiscalTipoDto resultado = service.atualizar(dto);
-        assertEquals(notaFiscalTipo.getNome(), resultado.getNome());
+        assertEquals(ENTRADA, notaFiscalTipoAtualizada.getNome());
     }
 
     @Test
     public void atualizarDeveObrigarId() {
-        NotaFiscalTipo notaFiscalTipo = new NotaFiscalTipo();
-        notaFiscalTipo.setNome(ENTRADA);
         notaFiscalTipo.setId(null);
-        NotaFiscalTipoDto dto = new NotaFiscalTipoDto();
-        dto.setNome(notaFiscalTipo.getNome());
-        dto.setId(notaFiscalTipo.getId());
-        when(mapper.converterParaEntidade(dto)).thenReturn(notaFiscalTipo);
         when(repository.save(any(NotaFiscalTipo.class))).thenReturn(notaFiscalTipo);
+
         Exception excecao = assertThrows(CrudException.class, () -> {
-            service.atualizar(dto);
+            service.atualizar(notaFiscalTipoDto);
         });
+
         assertEquals("Obrigatório preencher o id do tipo de nota fiscal.", excecao.getMessage());
     }
 
     @Test
     public void atualizarDeveObrigarNome() {
-        NotaFiscalTipo notaFiscalTipo = new NotaFiscalTipo();
-        notaFiscalTipo.setId(ID_SAIDA);
         notaFiscalTipo.setNome(null);
-        NotaFiscalTipoDto dto = new NotaFiscalTipoDto();
-        dto.setNome(notaFiscalTipo.getNome());
-        when(mapper.converterParaEntidade(dto)).thenReturn(notaFiscalTipo);
         when(repository.save(any(NotaFiscalTipo.class))).thenReturn(notaFiscalTipo);
+
         Exception excecao = assertThrows(CrudException.class, () -> {
-            service.atualizar(dto);
+            service.atualizar(notaFiscalTipoDto);
         });
+
         assertEquals("Obrigatório preencher o nome do tipo de nota fiscal.", excecao.getMessage());
     }
 
     @Test
     public void buscarPorId() {
+         when(repository.findById(anyInt())).thenReturn(notaFiscalTipoOpcional);
 
+         NotaFiscalTipoDto itemEncontrado = service.buscarPorId(ID);
+         
+         assertNotNull(itemEncontrado);
+         assertEquals(NotaFiscalTipoDto.class, itemEncontrado.getClass());
+         assertEquals(ID, itemEncontrado.getId());
     }
 
     @Test
     public void buscarPorIdInexistente() {
-        when(repository.findById(ID_INEXISTENTE)).thenReturn(Optional.empty());
+         when(repository.findById(anyInt())).thenReturn(Optional.empty());
 
-        Exception excecao = assertThrows(CrudException.class, () -> {
-            service.buscarPorId(ID_INEXISTENTE);
+        Exception excecao = assertThrows(NotaFiscalTipoNaoEncontrada.class, () -> {
+             service.buscarPorId(ID);
         });
-        assertEquals(String.format("Nota não encontrada para id {}.", ID_INEXISTENTE), excecao.getMessage());
+        
+        assertEquals(NotaFiscalTipoNaoEncontrada.class, excecao.getClass());
+         assertEquals("Tipo de nota não encontrada para o id " +
+         ID, excecao.getMessage());
     }
 
     @Test
     public void buscarPorNomeExistente() {
+        when(repository.findByNome(ENTRADA)).thenReturn(notaFiscalTipoOpcional);
 
+        NotaFiscalTipoDto itemEncontrado = service.buscarPorNome(ENTRADA);
+
+        assertEquals(ENTRADA, itemEncontrado.getNome());
     }
 
     @Test
     public void buscarPorNomeInexistente() {
-        when(repository.findByNome(INEXISTENTE)).thenReturn(Optional.empty());
+         when(repository.findByNome(anyString())).thenReturn(Optional.empty());
 
-        Exception excecao = assertThrows(CrudException.class, () -> {
-            service.buscarPorNome(INEXISTENTE);
+        Exception excecao = assertThrows(NotaFiscalTipoNaoEncontrada.class, () -> {
+             service.buscarPorNome(SAIDA);
         });
-        assertEquals(String.format("Nota não encontrada para o nome {}.", INEXISTENTE), excecao.getMessage());
+        
+         assertEquals("Tipo de nota não encontrada para o nome " +
+         SAIDA, excecao.getMessage());
+    }
+
+    @Test
+    public void deveriaNaoDeletarPorIdInexistente() {
+        when(repository.findById(anyInt())).thenReturn(Optional.empty());
+        
+        Exception excecao = assertThrows(NotaFiscalTipoNaoEncontrada.class, () -> {
+            service.deletarPorId(ID);
+        });
+        
+        assertEquals("Tipo de nota não encontrada para o id " +
+                        ID, excecao.getMessage());
     }
 
     @Test
     public void deletarPorId() {
-        int id = 1;
-        doNothing().when(repository).deleteById(id);
-        service.deletarPorId(id);
-        verify(repository, times(1)).deleteById(id);
+        when(repository.findById(anyInt())).thenReturn(notaFiscalTipoOpcional);
+        doNothing().when(repository).deleteById(anyInt());
+        service.deletarPorId(ID);
+        verify(repository, times(1)).deleteById(ID);
     }
 
     @Test
     public void listarTodos() {
-        List<NotaFiscalTipo> lista = Arrays.asList(new NotaFiscalTipo(), new NotaFiscalTipo());
-        when(repository.findAll()).thenReturn(lista);
+        when(repository.findAll()).thenReturn(List.of(notaFiscalTipo, notaFiscalTipo));
 
-        List<NotaFiscalTipo> result = service.listarTodos();
-        assertNotNull(result);
-        assertEquals(2, result.size());
+        List<NotaFiscalTipoDto> listaNotasFiscaisTipos = service.listarTodos();
+        
+        assertNotNull(listaNotasFiscaisTipos);
+        assertEquals(2, listaNotasFiscaisTipos.size());
+        assertEquals(NotaFiscalTipoDto.class, listaNotasFiscaisTipos.get(0).getClass());
+        assertEquals(ID, listaNotasFiscaisTipos.get(1).getId());
         verify(repository, times(1)).findAll();
     }
+
+    private void inicializarNotaFiscalTipo() {
+        notaFiscalTipo = new NotaFiscalTipo();
+        notaFiscalTipo.setId(ID);
+        notaFiscalTipo.setNome(ENTRADA);
+
+        notaFiscalTipoDto = new NotaFiscalTipoDto();
+        notaFiscalTipoDto.setId(ID);
+        notaFiscalTipoDto.setNome(ENTRADA);
+
+        notaFiscalTipoOpcional = Optional.of(notaFiscalTipo);
+
+        when(mapper.converterParaEntidade(notaFiscalTipoDto)).thenReturn(notaFiscalTipo);
+        when(mapper.converterParaDto(notaFiscalTipo)).thenReturn(notaFiscalTipoDto);
+    }
+
 }
